# FunctionalConnectFour

./: Board.hs  CHANGELOG.md  Connect4.hs  FunctionalConnectFour.cabal  Main.hs  Move.hs  README.md
.stack-work/: stack.sqlite3
.stack-work/ghci/20732287/: cabal_macros.h
app/: Board.hs  Main.hs  Move.hs
dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes
