cabal-version:      2.4
name:               FunctionalConnectFour
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:          Connect Four UI on the command line

-- A longer description of the package.
-- description:       Interactive 2 person Connect 4 game 
--			    where the users play against one another
--			    until a person can get 4 in a row. 

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:

-- The package author(s).
-- author:            Sammy and Garrett

-- An email address to which users can send suggestions, bug reports, and patches.
-- maintainer: colliergc@hendrix.edu

-- A copyright notice.
-- copyright:
-- category:          Game
extra-source-files:
    CHANGELOG.md
    README.md

executable FunctionalConnectFour
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    other-modules:    Boards

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.14.3.0
    hs-source-dirs:   app
    default-language: Haskell2010
